Fix breadcrumbs text truncate

--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -45,22 +45,7 @@
 
   &__item {
     position: relative;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.3;
     color: var(--text-dark-color);
-
-    @include tablet {
-      font-size: 14px;
-    }
-
-    @include mobile {
-      font-size: 8px;
-    }
-
-    &:last-of-type {
-      @include text-truncate(1);
-    }
 
     &:not(:last-child):after {
       content: '';
@@ -91,11 +76,24 @@
   }
 
   &__link {
-    @include text-truncate(1);
-
     @include focus {
       outline: var(--outline);
       outline-offset: var(--outline-offset);
+    }
+  }
+
+  &__text {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.3;
+    @include text-truncate(1);
+
+    @include tablet {
+      font-size: 14px;
+    }
+
+    @include mobile {
+      font-size: 8px;
     }
   }
 }
